--- a/ahn/src/main/resources/templates/xdm/code/codeXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/code/codeXdmList.html
@@ -166,7 +166,7 @@
                                                 <input class="form-check-input row-checkbox" id="1" type="checkbox">
                                                 <label class="form-check-label" for="1"></label>
                                             </th>
-                                            <td th:text="${vo.totalRows - ((vo.thisPage - 1) * vo.rowNumToShow + listStat.index)}"></td>
+                                            <td th:text="${vo.totalRows - ((vo.thisPage - 1) * vo.rowNumToShow + )}"></td>
                                             
                                             <td th:text="${list.cdgSeq}"></td>
                                             <td th:text="${list.ifcgName}"></td>
