주문등록폼 완성

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -306,10 +306,8 @@
                 <ul class="list">
                      <li>
                         <a href="#" >
-                            
                             <span>home</span>
                         </a>
-                        
                     </li>
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
@@ -318,7 +316,7 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/OrderXdmList}">주문목록</a>
+                                <a class="" th:href="@{/OrderXdmList}">주문목록</a>
                             </li>
                            
                         </ul> 
