--- a/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmForm.html
+++ b/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmForm.html
@@ -90,16 +90,17 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-sm-3">
+								 <div class="col-sm-3">
 									<div class="form-group">
 										<div class="form-line">
 											<h2 class="card-inside-title">
 												<small>수량</small>
 											</h2>
-											<input id="shOrderCount" name="shOrderCount">
+											<input type="text" id="shOrderCount" name="shOrderCount" class="form-control">
 										</div>
 									</div>
-								</div>
+								</div> 
+								 
 							</div>
 							<div class="row clearfix">
 								<div class="col-sm-12">
