--- a/ahn/src/main/resources/templates/pda/DeliveryPda.html
+++ b/ahn/src/main/resources/templates/pda/DeliveryPda.html
@@ -38,7 +38,7 @@
   
 
 
-   <button type="button" style="margin-top:10px; width:100%; padding:10px; font-size:14px; background-color:#4CAF50; color:white; border:none; border-radius:5px;">
+   <button id ="aa" type="button" style="margin-top:10px; width:100%; padding:10px; font-size:14px; background-color:#4CAF50; color:white; border:none; border-radius:5px;">
     배송하기
   </button>
   <br>   <br>   <br>  
